--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,17 +5,17 @@ description = ""
 authors = ["jkc <1044500650@qq.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.7, <4"
 django = "^3.2.8"
 djangorestframework = "^3.12.4"
 django-extensions = "^3.1.3"
-pytest = "^6.2.5"
+drf-extensions = "^0.7.1"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^3.2.2"
 pytest-django = "^4.4.0"
 django-test-plus = "^2.2.0"
-drf-extensions = "^0.7.1"
+pytest = "^6.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
