--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,12 @@ django = "^3.2.8"
 djangorestframework = "^3.12.4"
 django-extensions = "^3.1.3"
 drf-extensions = "^0.7.1"
+django-model-utils = "^4.2.0"
+django-imagekit = "^4.0.2"
+pillow = "^8.4.0"
+drf-spectacular = "^0.20.2"
+djoser = "^2.1.0"
+factory-boy = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^3.2.2"
@@ -25,3 +31,9 @@ build-backend = "poetry.core.masonry.api"
 name = "tsinghua"
 default = true
 url = "https://pypi.tuna.tsinghua.edu.cn/simple"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+DJANGO_SETTINGS_MODULE = "config.settings.test"
+python_files = "tests.py test_*.py"
+addopts = "--reuse-db"
