--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pillow = "^8.4.0"
 drf-spectacular = "^0.20.2"
 djoser = "^2.1.0"
 factory-boy = "^3.2.0"
+django-environ = "^0.8.1"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^3.2.2"
