--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ factory-boy = "^3.2.0"
 django-environ = "^0.8.1"
 mysqlclient = "^2.0.3"
 uvicorn = {extras = ["standard"], version = "^0.15.0"}
+django-tree-queries = "^0.7.0"
 
 
 [tool.poetry.dev-dependencies]
