--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ django-environ = "^0.8.1"
 mysqlclient = "^2.0.3"
 uvicorn = {extras = ["standard"], version = "^0.15.0"}
 django-tree-queries = "^0.7.0"
+django-tree-comments = "0.0.2"
 
 
 [tool.poetry.dev-dependencies]
