--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ mysqlclient = "^2.0.3"
 uvicorn = {extras = ["standard"], version = "^0.15.0"}
 django-tree-queries = "^0.7.0"
 django-tree-comments = "0.0.2"
+django-notifications-plus = "^0.0.0"
 
 
 [tool.poetry.dev-dependencies]
