change repo url

--- a/devops/ansible/roles/project/tasks/repo.yml
+++ b/devops/ansible/roles/project/tasks/repo.yml
@@ -6,8 +6,7 @@
 
 - name: Checkout repository
   ansible.builtin.git:
-#    repo: https://github.com/DjangoStudyTeam/django-China-api.git
-    repo: https://hub.fastgit.org/DjangoStudyTeam/django-China-api.git
+    repo: https://github.com/DjangoStudyTeam/django-China-api.git
     dest: "{{ project_path }}"
     version: "{{ version }}"
     accept_hostkey: yes
